build(java): Upgrade to java 11 (#242)
* chore(java): Set compiler release options to java 11

* cleanup: Remove `sourceCompatibility` and `targetCompatibility` settings - covered by `release`

* cleanup: Remove apply of `java` plugin - only need `java-library`

* deps(caffeine): Update to 3.1.8 compatible with java >= 11

* build: Set java toolchain to 11

* chore(isBlank): Use isBlank from java 11 and remove custom implementation

* docs: Add java compatibility section